Added types for ipam and network

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -14,3 +14,4 @@ target_link_libraries(docker-plugin-cpp PRIVATE llhttp Threads::Threads)
 target_include_directories(docker-plugin-cpp PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_compile_features(docker-plugin-cpp PUBLIC cxx_std_11)
 target_compile_options(docker-plugin-cpp PRIVATE -Wall -Wextra -Werror -Weffc++ -Wold-style-cast)
+target_compile_definitions(docker-plugin-cpp PRIVATE -DPICOJSON_USE_INT64)
