--- a/sample_volume/CMakeLists.txt
+++ b/sample_volume/CMakeLists.txt
@@ -4,3 +4,7 @@ add_executable(sample_volume
 target_include_directories(sample_volume PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_link_libraries(sample_volume PRIVATE docker-plugin-cpp)
 target_compile_options(sample_volume PRIVATE -Wall -Wextra -Werror -Weffc++ -Wold-style-cast)
+if(DPCPP_WITH_ASAN)
+    target_compile_options(sample_volume PRIVATE -fsanitize=address)
+	target_link_libraries(sample_volume PRIVATE -fsanitize=address)
+endif()
